force-app/main/default/objects/Trigger__c/Trigger__c.object-meta.xml
<CustomObject>
    <label>Trigger</label>
    <nameField>
        <label>Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>