force-app/main/default/objects/Trigger__c/fields/After_UnDelete__c.field-meta.xml
<CustomField>
    <fullName>After_UnDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After UnDelete</label>
    <type>Checkbox</type>
</CustomField>