force-app/main/default/objects/Trigger__c/fields/Excluded_Profiles__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Profiles__c</fullName>
    <description>Comma-separated list of Profile Ids which will not cause the trigger to fire.</description>
    <inlineHelpText>Comma-separated list of Profile Ids which will not cause the trigger to fire.</inlineHelpText>
    <label>Excluded Profiles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>