force-app/main/default/objects/Trigger__c/fields/Excluded_Users__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Users__c</fullName>
    <description>Comma-separated list of User Ids which will not cause the trigger to fire.</description>
    <inlineHelpText>Comma-separated list of User Ids which will not cause the trigger to fire.</inlineHelpText>
    <label>Excluded Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>