force-app/main/default/objects/Trigger__c/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>