force-app/main/default/objects/Trigger__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>This trigger runs against which object?</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>