force-app/main/default/objects/Trigger__c/fields/Recursive_Execution_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Recursive_Execution_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recursive Execution Allowed</label>
    <type>Checkbox</type>
</CustomField>