force-app/main/default/objects/Trigger__c/fields/Run_for_Recordypes__c.field-meta.xml
<CustomField>
    <fullName>Run_for_Recordypes__c</fullName>
    <label>Run for Recordypes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>