force-app/main/default/objects/Trigger__c/fields/Trigger_Name_Unique__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Name_Unique__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Trigger Name Unique</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>